# adad

./: CMakeLists.txt  README.md
src/: inputcontroller.cpp  inputcontroller.h  main.cpp  mainwindow.cpp  mainwindow.h
